# agentrete

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  TODO.md  build.rs  codex.sh  f.sh
.dev/: TODO.md
.github/workflows/: ci.yml  release.yml
docs/: agent-hooks.md  agentrete.service.in  architecture.md  comparison.md  config-reference.toml  config-reference.yaml  duckdb-concurrency.md  embedding-benchmark.md  kg-design.md  memory-decision.md  memory-lifecycle.md  model2vec-distillation.md  test-plan.md
hooks/unix/: _json_extract.sh  claude-post-tool.sh  claude-startup.sh  hooks.codex.json  post-compact.sh  post-tool-use.sh  pre-compact.sh  pre-tool-use.sh  prompt-submit.sh  session-start.sh  stop.sh  subagent-start.sh  subagent-stop.sh
hooks/windows/: _json_extract.ps1  claude-post-tool.ps1  claude-startup.ps1  hooks.codex.json  post-compact.ps1  post-tool-use.ps1  pre-compact.ps1  pre-tool-use.ps1  prompt-submit.ps1  session-start.ps1  stop.ps1  subagent-start.ps1  subagent-stop.ps1
migrations/: 001_init.sql
npm/: .npmignore  agentrete  agentrete.js  package.json  postinstall.js
scripts/: distill-bge-m3.py  distill-bge-small-zh.py  distill-bge-small-zh.sh  distill-models.py  download-sqlite-vec.py  insert-10k.py  push-to-main.sh  smoke-test.sh
src/: config.rs  main.rs  search.rs  storage.rs  types.rs
src/cli/: daemon.rs  hooks.rs  memory.rs  mod.rs  scan.rs  seed.rs  setup_wizard.rs
src/embed/: embeddings.rs  mod.rs  model2vec_embed.rs  models.rs  remote.rs
src/embed/remote/: anthropic.rs  mod.rs  ollama.rs  openai.rs
src/knowledge_graph/: mod.rs  scanner.rs
src/mcp/: handlers.rs  mod.rs  protocol.rs  tasks.rs  transport_http.rs  transport_stdio.rs  v2024.rs  v2025_06.rs  v2025_11.rs
src/mcp_sdk/: mod.rs  server.rs
src/mcp_sdk/tools/: kg.rs  memory.rs  mod.rs
src/storage/: kg.rs  mod.rs  mod_part1.tmp  schema.rs  search.rs
