[package]
name = "agentrete"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "Local-first persistent memory for AI coding agents - sqlite-vec + FTS5 + MCP"
rust-version = "1.76"
repository = "https://github.com/dyrnq/agentrete"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite", "sqlite-load-extension"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytemuck = "1"
serde_yaml = "0.9"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3.32"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
tokenizers = "0.19"
rmcp = "1.7.0"
dirs = "6.0.0"
axum = { version = "0.8.9", features = ["macros"] }

config = { version = "0.15.20", features = ["toml", "yaml", "json"] }
sqlite-vec = "0.1.9"
log = "0.4.30"
model2vec-rs = "0.2.1"
petgraph = { version = "0.8.3", features = ["serde-1"] }
notify = "7.0.0"



tempfile = "3"
walkdir = "2.5.0"

[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3

